--- a/component/authentication-endpoint/pom.xml
+++ b/component/authentication-endpoint/pom.xml
@@ -2,15 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>org.wso2.carbon.extension.identity.authenticator</groupId>
         <artifactId>org.wso2.carbon.extension.identity.authenticator.rsasecurid</artifactId>
         <version>1.0.0</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>org.wso2.carbon.extension.archetype.identity.authenticator</groupId>
-    <artifactId>org.wso2.carbon.extention.identity.authenticator.endpoint</artifactId>
+    <artifactId>org.wso2.carbon.extention.identity.authenticator.rsasecurid.endpoint</artifactId>
     <version>1.0.0</version>
     <packaging>war</packaging>
     <name>WSO2 Carbon - Identity Application Authentication RSA SecurID Endpoint</name>
