--- a/component/authenticator/pom.xml
+++ b/component/authenticator/pom.xml
@@ -17,16 +17,14 @@
 
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.wso2.carbon.extension.archetype.identity.authenticator</groupId>
+        <groupId>org.wso2.carbon.extension.identity.authenticator</groupId>
         <artifactId>org.wso2.carbon.extension.identity.authenticator.rsasecurid</artifactId>
         <version>1.0.0</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
-
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>org.wso2.carbon.extension.identity.authenticator</groupId>
-    <artifactId>org.wso2.carbon.extension.identity.authenticator.rsasecurid</artifactId>
+    <artifactId>org.wso2.carbon.extension.identity.authenticator.rsasecurid.connector</artifactId>
     <version>1.0.0</version>
 
     <packaging>bundle</packaging>
