--- a/component/authenticator/pom.xml
+++ b/component/authenticator/pom.xml
@@ -44,6 +44,13 @@
             <artifactId>org.wso2.carbon.user.core</artifactId>
             <version>${carbon.kernel.version}</version>
         </dependency>
+        <!--<dependency>
+            <groupId>com.rsa.authagent.authapi</groupId>
+            <artifactId>rsa-auth-api</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/resources/authapi.jar</systemPath>
+        </dependency>-->
     </dependencies>
     <build>
         <pluginManagement>
