--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <artifactId>org.wso2.carbon.extension.identity.authenticator.rsasecurid</artifactId>
     <version>1.0.0</version>
     <packaging>pom</packaging>
-    <name>WSO2 Carbon Extension - RSA SeucurID Pom</name>
+    <name>WSO2 Carbon Extension - RSA SecurID Pom</name>
     <url>http://wso2.org</url>
     <profiles>
         <profile>
@@ -36,12 +36,5 @@
             </modules>
         </profile>
     </profiles>
-    <dependencies>
-        <dependency>
-            <groupId>com.rsa.securid</groupId>
-            <artifactId>authapi</artifactId>
-            <version>1.0</version>
-        </dependency>
-    </dependencies>
 
 </project>
